# vim: set noexpandtab:

2012-10-05 Steve
	* Added isSherpaSample(mcID)
	* Put evtFlag back into SusyEvent to recover some backwards compatibility
		* I _think_ this will work
		* Bits won't be set in latest ntuples

2012-10-04 Matt
	* Changed default trigger initializtion to HCP

2012-10-03 Steve
	* Added larError flag to Event class
	* Added ECut_TileErr to enum
	* Tagging SusyNtuple-00-00-31

2012-10-03 Anyes
	* fix getEventWeight constructor to use LUMI_A_E such as to get correct evt weight for 13/fb

2012-10-02 Steve
	* Added new EventCleaningCuts enum and flags to Event class
		* Will replace the evtFlag bit word currently stored
		* Contains flags for all cuts in SusyNtMaker so that we can turn off
		  all filtering and still save the flags to apply the cuts later
	* Updated evtFlag usage to cutFlags
	* Tagging SusyNtuple-00-00-30

2012-09-30 Anyes
	* Add functions for finding jet in bad FCAL regions

2012-09-26 Steve
	* Added lumi constant for A-E (13/fb)
	* Tagging SusyNtuple-00-00-29

2012-09-24 Serhan Mete <amete@cern.ch>
	* SusyNtuple/SusyDefs.h: Fix space in "EES_Z_UP[ ]" in SusyNtSystNames

2012-09-22 Anyes
	* Remove hard coded cut for 2L jet selection
	* Add switch to metRel to use F30. Default: False 
	
2012-09-21 Anyes
	* Update grabbing the .env file for the Btag SF. Default is w/ JVF. 
	Use function arg to get the noJVF file/

2012-09-19 Matt
	* Fixed DilTrigLogic to not check trigger for MC, just checks the region.
	* Changed constructor DilTrigLogic to not require isMC bool, always initialize the reweight tool now

2012-09-19 Steve
	* Added ptcone30ElStyle to Muon class
	* Added passMllForAlpgen flag for adding low mass Alpgen to Sherpa Z
	* Added D3PDTag enum for controlling d3pd branch changes
	* Tagging SusyNtuple-00-00-28

2012-09-19 Serhan Mete <amete@cern.ch>
	* Root/SusyNtTools.cxx: Update getMetRel and passTopTag for the latest recommendations
	* Root/SusyNtAna.cxx: Added extra JetVector (m_signalJets2Lep) to getSignalObjects(...)