@@ -39,6 +39,8 @@ class SusyNtTools
     // Default weight uses full dataset, currently A-D
     // Pileup weights correspond to same dataset.
     virtual float getEventWeight(const Susy::Event* evt, float lumi = LUMI_A_E);
+    // Temporary fixed version of getEventWeight for n0105
+    virtual float getEventWeightFixed(unsigned int mcChannel, const Susy::Event* evt, float lumi = LUMI_A_E);
 
     // Use this function to scale MC to the A-B3 unblinded dataset (1.04/fb)
     // This will use the correct pileup weights for A-B3
